--- a/client/src/components/map.css
+++ b/client/src/components/map.css
@@ -1,11 +1,5 @@
-.map-wrap {
-    position: relative;
-    width: 100%;
-    height: calc(100vh - 77px); /* calculate height of the screen minus the heading */
-  }
-  
   .map {
     position: absolute;
     width: 100%;
-    height: 100%;
+    height: 110%; /* get rid of the watermarks lmao*/
   }
