--- a/client/src/components/map.css
+++ b/client/src/components/map.css
@@ -1,5 +1,6 @@
   .map {
     position: absolute;
     width: 100%;
-    height: 110%; /* get rid of the watermarks lmao*/
+    height: 110%; 
   }
+/* get rid of the watermarks lmao*/
