--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,25 +1,36 @@
-.html, body {
+html, body {
   margin: 0;
+  height: 100%;
   display: flex;
+  flex-direction: column;
+  color: black;
+  font-family: 'Roboto', sans-serif;
+}
+
+a {
+  color: white;
+  text-decoration: none;
 }
 
 .navbar {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  height: 10vh;
+  color: white; 
+  background-color: black; 
+  text-decoration: none;
+  z-index: 1000; 
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0 20px;
-  background-color: #333;
-  color: white;
+  padding: 0 10px; 
+  box-sizing: border-box; /* Ensure padding is included in the height */
 }
 
-.navbar-overlay {
-  position: absolute;
-  bottom: 0;
-  left: 0;
+.map-container {
+  flex-grow: 1;
+  position: relative;
   width: 100%;
-  background-color: rgba(0, 0, 0, 0.7); /* Optional: semi-transparent background */
-  color: white; /* Adjust text color if needed */
-  padding: 10px;
-  text-align: center;
-  z-index: 10; /* Ensures it stays on top of the map */
+  height: 85vh; /* Adjust the height so other elements are visible */
 }
