--- a/client/src/components/map.css
+++ b/client/src/components/map.css
@@ -1,6 +1,9 @@
-  .map {
-    position: fixed;
-    width: 100%;
-    height: 105%; 
-  }
+.map {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+}
 /* get rid of the watermarks lmao*/
